PostsCp, UsersCp 완료

--- a/public/hof.html
+++ b/public/hof.html
@@ -40,6 +40,8 @@ withCalculator(sub)(10, 20, 'SUB')
 withCalculator(multi)(10, 20, 'MULTI')
 withCalculator(divide)(10, 20, 'DIVIDE')
 
+// HOC
+// const Post = withBuildComponent({url, id})(PostComponent)
 
 // 초급 방식
 function calcFn(a, b, operator) {
